# HI3516CV500-SDK

./: .gitignore  CMakeLists.txt  README.md
CMake/: ArmelToolchain.cmake  ArmhfToolchain.cmake  KernelBuildTools.cmake
sdk/bootrom/: bootrom.cpp  functions.txt  sram.txt
sdk/bootrom/bootrom-re/: bootloader.c  hi3516cv500-regmap.h  regmap-crg.h  regmap-ddrc.h  regmap-gpio.h  regmap-klad.h  regmap-misc.h  regmap-mmc.h  regmap-otp.h  regmap-rsa.h  regmap-spacc.h  regmap-sysctrl.h  regmap-timer.h  regmap-trng.h  regmap-uart.h  (+2 more)
sdk/common/: hi_comm_aio.h  hi_comm_ao.h  hi_common.h  hi_osal.h  mpi_ae.h  mpi_awb.h  securec.h
sdk/drivers/: CMakeLists.txt
sdk/fastburn/: CMakeLists.txt  byte_stream.h  fastburn.cpp
sdk/fastburn/fastboot/: ArmToolchain.cmake  CMakeLists.txt  format.ld
sdk/fastburn/fastboot/Include/: HI3516CV500.h  config.h  ddr_ddrt_s40.h  ddr_ddrt_t12_v100.h  ddr_ddrt_t16.h  ddr_ddrt_t28.h  ddr_interface.h  ddr_phy_s40.h  ddr_phy_t12_v100.h  ddr_phy_t12_v101.h  ddr_phy_t16.h  ddr_phy_t28.h  ddr_training.h  ddr_training_custom.h  ddr_training_impl.h  ddr_training_internal_config.h  init_registers.h
sdk/fastburn/fastboot/Include/asm/arch/: platform.h
sdk/fastburn/fastboot/Include/configs/: hi3516cv500.h
sdk/fastburn/fastboot/Source/: HI3516CV500.S  asm_common.S  ddr_training.c  ddr_training_boot.c  ddr_training_console.c  ddr_training_ctl.c  ddr_training_custom.c  ddr_training_impl.c  init_registers.c  main.c  register_table.c
sdk/libraries/: CMakeLists.txt
sdk/libraries/VoiceEngine/: adpcm.S  g711.S  g711func.S  g726.S  g726_sub.S  voice.S
sdk/libraries/aacdec/: aacdec.c  aacdec.h  aacdec_lib.h  fdk-aac-mod.h
sdk/libraries/aacenc/: aacenc.c  aacenc.h  aacenc_lib.h
sdk/libraries/dnvqe/: dnvqe_errno.h  dnvqe_work.S  dnvqe_work.c  hi_audio_dl_work.c  hi_audio_module_wrap.c  hi_dnvqe_wrap.S  hi_dnvqe_wrap.c  hi_resample_work.S  hi_resample_work.c  re_dnvqe_audio_dl_work.h  re_dnvqe_audio_module_wrap.h  re_dnvqe_comm.h  re_dnvqe_resampler_work.h  re_dnvqe_work.h  re_dnvqe_wrap.h
sdk/libraries/hdmi/: mpi_hdmi.S  mpi_hdmi_com.S
sdk/libraries/hi_cipher/: drv_cipher_kapi.h  hi_cipher_compat.h  hi_mpi_cipher.h  mpi_cipher.c  sys_cipher.c  sys_cipher.h  unf_cipher.c  user_osal_lib.c  user_osal_lib.h
sdk/libraries/hiae/: hi_ae_adp.S  hi_ae_adp.c  hi_ae_increment.S  hi_ae_route.S  hi_ae_route_ex.S  hi_auto_exposure.S  hi_auto_iris.S  hi_iris_pwm.S  hi_piris_gpio.S  mpi_isp_ae.S  mpi_isp_ae.c  re_hi_ae_adp.h  re_mpi_isp_ae.h
sdk/libraries/hiawb/: hi_acm.S  hi_auto_wb.S  hi_awb_adp.S  hi_color_management.S  mpi_isp_awb.S
sdk/libraries/hiawb_natura/: hi_auto_wb.S  hi_awb_adp.S  hi_color_management.S  hi_spe_auto_wb.S  hi_spe_kcawb.S  hi_spe_kcawb_calc.S  hi_spe_kcawb_scanScanbn4.S  hi_spe_kcawb_vector.S  hi_spe_kcawb_view.S  mpi_isp_awb.S
sdk/libraries/hidehaze/: isp_dehaze.S
sdk/libraries/hidrc/: isp_drc.S
sdk/libraries/hifb/: hifb_main.c
sdk/libraries/hifisheyecalibrate/: fisheye_calibrate.S  hiisp_sw.S
sdk/libraries/hildci/: isp_ldci.S
sdk/libraries/include/: hi_comm_aio.h  hi_comm_ao.h  hi_comm_gdc.h  hi_comm_region.h  hi_comm_sys.h  hi_comm_vb.h  hi_common.h  mpi_gdc.h  mpi_vgs.h  mpi_vi.h  mpi_vo.h
sdk/libraries/isp/: isp_ae.S  isp_af.S  isp_antifalsecolor.S  isp_awb.S  isp_awb_online_calibration.S  isp_bayernr.S  isp_black_offset.S  isp_block.S  isp_ca.S  isp_clut.S  isp_csc.S  isp_dcfinfo.S  isp_debug.S  isp_defaults.S  isp_defect_pixel.S  isp_demosaic.S  isp_detail.S  isp_dgain.S  isp_dnginfo.S  isp_edgemark.S  isp_expander.S  isp_flicker.S  isp_fpn.S  isp_frame_switch_wdr.S  isp_frameinfo.S  isp_gamma.S  isp_gcac.S  isp_green_equalization.S  isp_hlc.S  isp_hrs.S  isp_inner.S  isp_lcac.S  isp_loglut.S  isp_loglut_fe.S  isp_lsc.S  isp_lsc_fe.S  isp_main.S  isp_math_utils.S  isp_mcds.S  isp_mlsc_online_cali.S  (+14 more)
sdk/libraries/ive/: check_param_user.S  ive_queue.S  mpi_ive.S
sdk/libraries/md/: check_param.S  inner_comm_user.S  ivs_md.S
sdk/libraries/mpi/: as_buf.c  audio_comm.c  audio_voice_adp.S  audio_voice_adp.c  hiisp_gdc_fw_pointquery.c  hiisp_gdc_fw_user.S  hiisp_gdc_fw_user.c  mpi_adec.S  mpi_aenc.S  mpi_ai.S  mpi_ai.c  mpi_ao.S  mpi_ao.c  mpi_audio.c  mpi_bind.S  mpi_bind.c  mpi_errno.h  mpi_gdc.c  mpi_region.c  mpi_sys.S  mpi_sys.c  mpi_vb.c  mpi_vdec.S  mpi_venc.S  mpi_vgs.c  mpi_vi.c  mpi_vo.c  mpi_vpss.c  re_audio_comm.h  re_debug.h  re_hiisp_gdc_fw_pointquery.h  re_hiisp_gdc_fw_user.h  re_mpi_ai.h  re_mpi_ao.h  re_mpi_audio.h  re_mpi_bind.h  re_mpi_comm.h  re_mpi_common.h  re_mpi_gdc.h  re_mpi_region.h  (+6 more)
sdk/libraries/nnie/: inner_comm_svp_user.S  mpi_nnie.S  nnie_check_param_user.S
sdk/libraries/securec/: fscanf_s.c  fwscanf_s.c  gets_s.c  memmove_s.c  memset_s.c  scanf_s.c  securecutil.c  snprintf_s.c  sprintf_s.c  sscanf_s.c  strcat_s.c  strcpy_s.c  strncat_s.c  strncpy_s.c  strtok_s.c  swprintf_s.c  swscanf_s.c  vfwscanf_s.c  vscanf_s.c  vsnprintf_s.c  vsprintf_s.c  vsscanf_s.c  vswprintf_s.c  vswscanf_s.c  vwscanf_s.c  wcscat_s.c  wcscpy_s.c  wcsncat_s.c  wcsncpy_s.c  wcstok_s.c  wmemcpy_s.c  wmemmove_s.c  wscanf_s.c
sdk/libraries/sns_gc2053/: gc2053_sensor.c  isp_calibration.c  notes.txt  sns_gc2053.c  sns_gc2053.h
sdk/libraries/sns_imx307/: imx307_cmos.S  imx307_sensor_ctl.S
sdk/libraries/sns_imx327/: imx327_cmos.S  imx327_sensor_ctl.S
sdk/libraries/sns_imx335/: imx335_cmos.S  imx335_sensor_ctl.S
sdk/libraries/sns_os05a/: os05a_cmos.S  os05a_sensor_ctl.S
sdk/libraries/svpruntime/: AuxiliaryMemoryManager.S  CustomerThread.S  GlobalSetting.S  GroupItem.S  HiRTSetting.S  MemoryList.S  MemoryPool.S  ModelGroup.S  ModelGroupConfig.S  ModelGroupManager.S  ModelGroupSetting.S  ModelLoader.S  ModelManager.S  NNIEThread.S  ProcManager.S  RunningThread.S  SegTask.S  TaskGroupManager.S  TaskManager.S  TaskMonitor.S  TaskRunner.S  hi_graph.S  hi_operand.S  hi_operation.S  hi_runtime_api.S  hirt_common.S  hirt_common_cplus.S  hirt_default_memory_ops.S  hirt_dll_ops.S  svprt_userproc.S
sdk/libraries/tde/: api_tde.S
sdk/libraries/upvqe/: hi_audio_dl_work.S  hi_audio_module_wrap.S  hi_upvqe_wrap.S  upvqe_work.S
(+97 files in other folders)
